# mw-anki

./: .env.example  .gitignore  Makefile  README.md  embed.py  pyproject.toml  scrape.py
